shimlang/test_scripts/errors/fn_add_int_bool.stderr
 1 | fn test(a, b) { a + b; }
                       ^
 2 | test(1, true);
Error: Operation '+' not supported between Integer(1) and Bool(true)
